--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
         <link rel="stylesheet" href="css/font-awesome.css">
         <link rel="stylesheet" href="css/bootstrap.min.css">
         <link rel="stylesheet" href="css/templatemo-style.css">
+        <link rel="stylesheet" href="css/style.css">
         <script src="js/vendor/modernizr-2.6.2.min.js"></script>
     </head>
     <body>
@@ -69,7 +70,7 @@
                     <ul class="navigation">
                         <li><a href="#top"><i class="fa fa-home"></i>Home</a></li>
                         <li><a href="#about"><i class="fa fa-user"></i>About Me</a></li>
-                        <li><a href="#hobbies"><i class="fa fa-newspaper-o"></i>My Hobbies</a></li>
+                        <li><a href="#hobbies"><i class="fa fa-newspaper-o"></i>Hobbies</a></li>
                         <li><a href="#projects"><i class="fa fa-github"></i>Projects</a></li>
                         <li><a href="#contact"><i class="fa fa-envelope"></i>Contact Me</a></li>
                         <li><a href="#"><i class="fa fa-mobile"></i>Mobile</a></li>
@@ -92,11 +93,14 @@
                 <ul class="navigation">
                     <li><a href="#top"><i class="fa fa-globe"></i>Welcome</a></li>
                     <li><a href="#about"><i class="fa fa-pencil"></i>About Me</a></li>
-                    <li><a href="#hobbies"><i class="fa fa-paperclip"></i>My Hobbies</a></li>
+                    <li><a href="#hobbies"><i class="fa fa-paperclip"></i>Hobbies</a></li>
                     <li><a href="#projects"><i class="fa fa-github"></i>Projects</a></li>
                     <li><a href="#contact"><i class="fa fa-link"></i>Contact Me</a></li>
                 </ul>
             </div> <!-- .main-navigation -->
+            <button class="btn">
+                <a href="img/1.jpg" target="_blank" download><i class="fa fa-file"></i> Resume</a>
+            </button>
             <div class="social-icons">
                 <ul>
                     <li><a href="https://www.facebook.com/profile.php?id=100021701740516"><i class="fa fa-facebook"></i></a></li>
@@ -135,11 +139,11 @@
                     </div> <!-- #about -->
                     </div>
                     
-                    <!-- hobbies -->
+                    <!-- Hobbies -->
                     <div class="page-section" id="hobbies">
                     <div class="row">
                         <div class="col-md-12">
-                            <h4 class="widget-title">WHAT I DO</h4>
+                            <h4 class="widget-title">My Hobbies</h4>
                             <p>When I'm not infront of a computer or pursuing my education, I enjoy being in the out doors. Being blessed with living and growing up in the beautiful Pacific Northwest I have been able to enjoy the boundless amount of activities that the PNW has to offer.</p>
                         </div>
                     </div>
@@ -188,20 +192,22 @@
                             <h4 class="widget-title">Projects</h4>
                         </div>
                     </div> <!-- #projects -->
-                    <div class="row hobbies-holder">
-                        <div class="col-md-4 col-sm-6">
-                            <h3>This Website</h3>
-                            <h4>July 2018 - Present</h4>
-                            <p>Test</p>
-                        </div>
-                        <div class="col-md-4 col-sm-6">
-                            <p>Test 2</p>
-                        </div>
-                        <div class="col-md-4 col-sm-6">
-                            <div class="project-item">
-                                <p>Test 3</p>
-                            </div>
-                        </div>
+                    <div class="row">
+                        <a class="project-column" href="https://www.github.com/matcarter/macarter.net" title="Website" target="_blank">
+                            <h5>This Website</h5>
+                            <h6>July 2018 - Present</h6>
+                            <p>A project to learn the basics of HTML and CSS along with being a portfolio.</p>
+                        </a>
+                        <a class="project-column" href="https://www.github.com/matcarter/scoutbot" title="ScoutBot" target="_blank">
+                            <h5>ScoutBot</h5>
+                            <h6>November 2018 - Present</h6>
+                            <p>A Discord bot written in Python that connects Discord and the Riot API to pull data about League of Legends players.</p>
+                        </a>
+                        <a class="project-column" href="https://www.github.com/matcarter" title="More" target="_blank">
+                            <h5>More to come</h5>
+                            <h6>July 2018 - Present</h6>
+                            <p>I was late to doing my work and projects on GitHub so I currently only have a few. Check back to see when more are added.</p>
+                        </a>
                     </div> <!-- .hobbies-holder -->
                     </div>
                     <hr>
@@ -210,12 +216,12 @@
                     <div class="page-section" id="contact">
                     <div class="row">
                         <div class="col-md-12">
-                            <h4 class="widget-title">PLACE TO TALK WITH ME</h4>
+                            <h4 class="widget-title">GET IN TOUCH WITH ME</h4>
                             <p>If you're interested in getting in touch with me please fill out the form below or feel free to email me directly at matthew@macarter.net.</p>
                         </div>
                     </div>
                     <div class="row">
-                        <form action="#" method="post" class="contact-form">
+                        <form action="mailto:matthew@macarter.net" method="post" type="text/plain" class="contact-form">
                             <fieldset class="col-md-4 col-sm-6">
                                 <input type="text" id="your-name" placeholder="Your Name...">
                             </fieldset>
