--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                 </ul>
             </div> <!-- .main-navigation -->
             <button class="btn">
-                <a href="img/1.jpg" target="_blank" download><i class="fa fa-file"></i> Resume</a>
+                <a href="img/welcome.jpg" target="_blank" download><i class="fa fa-file"></i> Resume</a>
             </button>
             <div class="social-icons">
                 <ul>
@@ -131,7 +131,7 @@
                         <div class="col-md-12">
                             <h4 class="widget-title">Learn About Me</h4>
                             <div class="about-image">
-                                <img src="img/8.jpg" alt="about me">
+                                <img src="img/about.jpg" alt="about me">
                             </div>
                             <p>Volton is free website design from <span class="blue">template</span><span class="green">mo</span>. You can use this template for any purpose. Please tell your friends about it. Thank you. Credit goes to <a rel="nofollow" href="http://unsplash.com" target="_parent">Unsplash</a> for images used in this design. You can <strong>change menu icons</strong> by checking <a rel="nofollow" href="http://fontawesome.info/font-awesome-icon-world-map/" target="_parent">Font Awesome</a> (version 4). Example: <strong>&lt;i class=&quot;fa fa-camera&quot;&gt;&lt;/i&gt;</strong></p>
                             <hr>
@@ -150,7 +150,7 @@
                     <div class="row hobbies-holder">
                         <div class="col-md-4 col-sm-6">
                             <div class="project-item">
-                                <img src="img/1.jpg" alt="">
+                                <img src="img/hobby-1.jpg" alt="">
                                 <div class="project-hover">
                                     <div class="inside">
                                         <h5><a href="#">Snowboarding</a></h5>
@@ -161,7 +161,7 @@
                         </div>
                         <div class="col-md-4 col-sm-6">
                             <div class="project-item">
-                                <img src="img/2.jpg" alt="">
+                                <img src="img/hobby-2.jpg" alt="">
                                 <div class="project-hover">
                                     <div class="inside">
                                         <h5><a href="#">Scuba Diving</a></h5>
@@ -172,7 +172,7 @@
                         </div>
                         <div class="col-md-4 col-sm-6">
                             <div class="project-item">
-                                <img src="img/3.jpg" alt="">
+                                <img src="img/hobby-3.jpg" alt="">
                                 <div class="project-hover">
                                     <div class="inside">
                                         <h5><a href="#">eSports</a></h5>
