Add Education section and Add more projects
 * TODO: Add content to Experience section

--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
                         <li><a href="#about"><i class="fa fa-user"></i>About Me</a></li>
                         <li><a href="#hobbies"><i class="fa fa-newspaper-o"></i>Hobbies</a></li>
                         <li><a href="#projects"><i class="fa fa-github"></i>Projects</a></li>
+                        <li><a href="#education"><i class="fa fa-graduation-cap"></i>Education</a></li>
+                        <li><a href="#experience"><i class="fa fa-briefcase"></i>Experience</a></li>
                         <li><a href="#contact"><i class="fa fa-envelope"></i>Contact Me</a></li>
-                        <li><a href="#"><i class="fa fa-mobile"></i>Mobile</a></li>
-                        <li><a href="#"><i class="fa fa-envelope"></i>Email</a></li>
                     </ul>
                 </div>
             </div>
@@ -95,11 +95,13 @@
                     <li><a href="#about"><i class="fa fa-pencil"></i>About Me</a></li>
                     <li><a href="#hobbies"><i class="fa fa-paperclip"></i>Hobbies</a></li>
                     <li><a href="#projects"><i class="fa fa-github"></i>Projects</a></li>
+                    <li><a href="#education"><i class="fa fa-graduation-cap"></i>Education</a></li>
+                    <li><a href="#experience"><i class="fa fa-briefcase"></i>Experience</a></li>
                     <li><a href="#contact"><i class="fa fa-link"></i>Contact Me</a></li>
                 </ul>
             </div> <!-- .main-navigation -->
             <button class="btn">
-                <a href="img/welcome.jpg" target="_blank" download><i class="fa fa-file"></i> Resume</a>
+                <a href="img/welcome.jpg" target="_blank" download><i class="fa fa-download"></i> Resume</a>
             </button>
             <div class="social-icons">
                 <ul>
@@ -114,8 +116,8 @@
         <div class="banner-bg" id="top">
             <div class="banner-overlay"></div>
             <div class="welcome-text">
-                <h2>Computer Scientist | Hobbyist</h2>
-                <h5>I am currently a computer science and mathematics undergraduate at Western Washington University. I am passionate about all kinds of technology and strive to innovate and motivate the future of technology.</h5>
+                <h2>Computer Scientist | Recreationist</h2>
+                <h5>I am currently a computer science undergraduate with a mathematics minor at Western Washington University. I am passionate about all kinds of technology and strive to innovate and motivate the future of technology.</h5>
             </div>
         </div>
 
@@ -130,21 +132,21 @@
                     <div class="row">
                         <div class="col-md-12">
                             <h4 class="widget-title">Learn About Me</h4>
-                            <div class="about-image">
-                                <img src="img/about.jpg" alt="about me">
-                            </div>
-                            <p>Volton is free website design from <span class="blue">template</span><span class="green">mo</span>. You can use this template for any purpose. Please tell your friends about it. Thank you. Credit goes to <a rel="nofollow" href="http://unsplash.com" target="_parent">Unsplash</a> for images used in this design. You can <strong>change menu icons</strong> by checking <a rel="nofollow" href="http://fontawesome.info/font-awesome-icon-world-map/" target="_parent">Font Awesome</a> (version 4). Example: <strong>&lt;i class=&quot;fa fa-camera&quot;&gt;&lt;/i&gt;</strong></p>
+                            <p>Programming started as a hobby for me when I was about 12 years old. I started writing code for the video game Minecraft. At first I was just learning how I could display simple text in the console and in game when the player typed a command. After learning the basics, I moved into creating server side plugins which were tools that added features to the game and could be utilized by server owners and players.</p>
+                            <br>
+                            <p>Currently I am a third year in the undergraduate computer science program at Western Washington University where I participate in a college eSports team, enjoy being apart of the snowboard class that is offered in the winter, and write code for projects that I love.</p>
                             <hr>
                         </div>
-                    </div> <!-- #about -->
                     </div>
+                    </div> <!-- #about -->
                     
                     <!-- Hobbies -->
                     <div class="page-section" id="hobbies">
                     <div class="row">
                         <div class="col-md-12">
                             <h4 class="widget-title">My Hobbies</h4>
-                            <p>When I'm not infront of a computer or pursuing my education, I enjoy being in the out doors. Being blessed with living and growing up in the beautiful Pacific Northwest I have been able to enjoy the boundless amount of activities that the PNW has to offer.</p>
+                            <p>When I'm not infront of a computer or pursuing my education, I enjoy being in the out doors. Since I was blessed with living and growing up in the beautiful Pacific Northwest I have been able to enjoy the boundless amount of activities that the PNW has to offer.</p>
+                            <br>
                         </div>
                     </div>
                     <div class="row hobbies-holder">
@@ -182,7 +184,7 @@
                             </div>
                         </div>
                     </div> <!-- .hobbies-holder -->
-                    </div>
+                    </div> <!-- #hobbies -->
                     <hr>
 
                     <!-- PROJECTS -->
@@ -191,7 +193,7 @@
                         <div class="col-md-12">
                             <h4 class="widget-title">Projects</h4>
                         </div>
-                    </div> <!-- #projects -->
+                    </div>
                     <div class="row">
                         <a class="project-column" href="https://www.github.com/matcarter/macarter.net" title="Website" target="_blank">
                             <h5>This Website</h5>
@@ -203,12 +205,89 @@
                             <h6>November 2018 - Present</h6>
                             <p>A Discord bot written in Python that connects Discord and the Riot API to pull data about League of Legends players.</p>
                         </a>
+                        <a class="project-column" title="Deadwood-Studios-USA" target="_blank">
+                            <h5>Deadwood Studios *</h5>
+                            <h6>May - June 2018</h6>
+                            <p>Deadood was a project where we took a real board game (Deadwood Studios USA) and turned it into a video game with a GUI.</p>
+                        </a>
+                    </div>
+                    <div class="row">
+                        <a class="project-column" title="Microshell" target="_blank">
+                            <h5>Microshell *</h5>
+                            <h6>April - May 2018</h6>
+                            <p>Microshell was a project where we developed our own shell that could execute commands, parse the arguments in a command, and handle commands with pipes.</p>
+                        </a>
                         <a class="project-column" href="https://www.github.com/matcarter" title="More" target="_blank">
                             <h5>More to come</h5>
                             <h6>July 2018 - Present</h6>
-                            <p>I was late to doing my work and projects on GitHub so I currently only have a few. Check back to see when more are added.</p>
+                            <p>I was late to managing my projects on GitHub so I currently only have a few repositories listed. Check back to see when more are added.</p>
                         </a>
-                    </div> <!-- .hobbies-holder -->
+                        <a class="project-column" target="_blank"></a>
+                    </div>
+                    <div class="row">
+                        <br>
+                        <p>* Projects who's source is not publicly available since they were projects for a college course. If you're interested in learning more about the proejct please get in touch with me and I would be more than happy to show the work that was put into it.</p>
+                    </div>
+                    </div> <!-- #projects -->
+                    <hr>
+
+                    <!-- EDUCATION -->
+                    <div class="page-section" id="education">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <h4 class="widget-title">Education</h4>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-12">
+                            <h5>Clark College <small>Fall 2015 - Spring 2017</small></h5>  
+                            <div class="col-md-12">
+                                <h6>CSE 121 - Intro to C</h6>
+                            </div>
+                            <div class="col-md-12">
+                                <h6>CSE 222 - Intro to Data Structures</h6>
+                            </div>
+                            <div class="col-md-12">
+                                <h6>CSE 223 - Data Structures & Object Oriented Programming</h6>
+                            </div>
+                            <div class="col-md-12">
+                                <h6>MATH 254 - Multivariable Calculus</h6>
+                            </div>
+                        </div>
+                        <div class="col-md-12">
+                            <h5>Western Washington University <small>Fall 2017 - Spring 2020</small></h5>
+                            <div class="col-md-12">
+                                <h6>CSCI 247 - Computer Systems I</h6>
+                            </div>
+                            <div class="col-md-12">
+                                <h6>CSCI 301 - Formal Language & Functional Programming</h6>
+                            </div>
+                            <div class="col-md-12">
+                                <h6>CSCI 305 - Analysis of Algorithms I</h6>
+                            </div>
+                            <div class="col-md-12">
+                                <h6>CSCI 345 - Object Oriented Design</h6>
+                            </div>
+                            <div class="col-md-12">
+                                <h6>CSCI 347 - Computer Systems II</h6>
+                            </div>
+                            <div class="col-md-12">
+                                <h6>CSCI 367 - Computer Networks I</h6>
+                            </div>
+                            <div class="col-md-12">
+                                <h6>MATH 204 - Elementary Linear Algebra</h6>
+                            </div>
+                        </div>
+                    </div>
+                    </div> <!-- #education -->
+                    <hr>
+
+                    <!-- EXPERIENCE -->
+                    <div class="page-section" id="experience">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <h4 class="widget-title">Experience</h4>
+                        </div>
                     </div>
                     <hr>
 
@@ -239,7 +318,7 @@
                             </fieldset>
                         </form>
                     </div> <!-- .contact-form -->
-                    </div>
+                    </div> <!-- #contact -->
                 </div>
             </div>
         </div>
