Add Experience section

--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                         <a class="project-column" href="https://www.github.com/matcarter/macarter.net" title="Website" target="_blank">
                             <h5>This Website</h5>
                             <h6>July 2018 - Present</h6>
-                            <p>A project to learn the basics of HTML and CSS along with being a portfolio.</p>
+                            <p>A project to familiarize myself with HTML and CSS by creating a portfolio website.</p>
                         </a>
                         <a class="project-column" href="https://www.github.com/matcarter/scoutbot" title="ScoutBot" target="_blank">
                             <h5>ScoutBot</h5>
@@ -243,35 +243,23 @@
                             <h5>Clark College <small>Fall 2015 - Spring 2017</small></h5>  
                             <div class="col-md-12">
                                 <h6>CSE 121 - Intro to C</h6>
-                            </div>
-                            <div class="col-md-12">
                                 <h6>CSE 222 - Intro to Data Structures</h6>
-                            </div>
-                            <div class="col-md-12">
                                 <h6>CSE 223 - Data Structures & Object Oriented Programming</h6>
                             </div>
                             <div class="col-md-12">
                                 <h6>MATH 254 - Multivariable Calculus</h6>
                             </div>
                         </div>
+                    </div>
+                    <div class="row">
                         <div class="col-md-12">
                             <h5>Western Washington University <small>Fall 2017 - Spring 2020</small></h5>
                             <div class="col-md-12">
                                 <h6>CSCI 247 - Computer Systems I</h6>
-                            </div>
-                            <div class="col-md-12">
                                 <h6>CSCI 301 - Formal Language & Functional Programming</h6>
-                            </div>
-                            <div class="col-md-12">
                                 <h6>CSCI 305 - Analysis of Algorithms I</h6>
-                            </div>
-                            <div class="col-md-12">
                                 <h6>CSCI 345 - Object Oriented Design</h6>
-                            </div>
-                            <div class="col-md-12">
                                 <h6>CSCI 347 - Computer Systems II</h6>
-                            </div>
-                            <div class="col-md-12">
                                 <h6>CSCI 367 - Computer Networks I</h6>
                             </div>
                             <div class="col-md-12">
@@ -287,6 +275,33 @@
                     <div class="row">
                         <div class="col-md-12">
                             <h4 class="widget-title">Experience</h4>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-12">
+                            <h5>Christenson Electric <small>IT Systems Admin Intern</small></h5>
+                            <div class="col-md-12">
+                                <h6>Summer 2018</h6>
+                                <p>During the summer of 2018 my responsibilities at Christenson consisted mostly of working with their cloud based application to help quicken work effiency and speed. My job was to design and develop new interactions with the forms such as submit and clear buttons along with designing a more modern interface for submission fields within the forms.</p>
+                            </div>
+                            <div class="col-md-12">
+                                <h6>Summer 2017</h6>
+                                <p>During the summer of 2017 my responsibilities at Christenson began to change as I started working with their new cloud based application in which they wanted to transfer most of their paper forms so that the technicians outside of the office would be able to fill them out on their iPads. My job was to become familiar with the new system and begin creating replica forms that had virtual fields that could be used to submit data.</p>
+                            </div>
+                            <div class="col-md-12">
+                                <h6>Summer 2016</h6>
+                                <p>During the summer of 2016 was my first summer as an IT Systems Admin Intern at Christenson Electric where I developed new technical, problem solving, and interpersonal skills in order to efficently diagnose a problem, come up with a solution, and implement said solution. I also became familiar with the basics of networking, building and deploying new workstations, and managing the office's general IT needs.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <br>
+                    <div class="row">
+                        <div class="col-md-12">
+                            <h5>G6 Airpark <small>Court Monitor</small></h5>
+                            <div class="col-md-12">
+                                <h6>January - August 2015</h6>
+                                <p>At G6 Airpark I was tasked with watching over different sections of the trampoline park to ensure that our customers were having a safe and enjoyable time on the trampolines. I quickly develoepd interpersonal skills that helped me communicate to our customers that our priority was their well-being and that they were having a fun time.</p>
+                            </div>
                         </div>
                     </div>
                     <hr>
