Add Resume and move files into static folder

--- a/index.html
+++ b/index.html
@@ -11,26 +11,26 @@
         <title>Matthew Carter</title>
 
         <!-- ****** faviconit.com favicons ****** -->
-        <link rel="shortcut icon" href="img/faviconit/favicon.ico">
-        <link rel="icon" sizes="16x16 32x32 64x64" href="img/faviconit/favicon.ico">
-        <link rel="icon" type="image/png" sizes="196x196" href="img/faviconit/favicon-192.png">
-        <link rel="icon" type="image/png" sizes="160x160" href="img/faviconit/favicon-160.png">
-        <link rel="icon" type="image/png" sizes="96x96" href="img/faviconit/favicon-96.png">
-        <link rel="icon" type="image/png" sizes="64x64" href="img/faviconit/favicon-64.png">
-        <link rel="icon" type="image/png" sizes="32x32" href="img/faviconit/favicon-32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="img/faviconit/favicon-16.png">
-        <link rel="apple-touch-icon" href="img/faviconit/favicon-57.png">
-        <link rel="apple-touch-icon" sizes="114x114" href="img/faviconit/favicon-114.png">
-        <link rel="apple-touch-icon" sizes="72x72" href="img/faviconit/favicon-72.png">
-        <link rel="apple-touch-icon" sizes="144x144" href="img/faviconit/favicon-144.png">
-        <link rel="apple-touch-icon" sizes="60x60" href="img/faviconit/favicon-60.png">
-        <link rel="apple-touch-icon" sizes="120x120" href="img/faviconit/favicon-120.png">
-        <link rel="apple-touch-icon" sizes="76x76" href="img/faviconit/favicon-76.png">
-        <link rel="apple-touch-icon" sizes="152x152" href="img/faviconit/favicon-152.png">
-        <link rel="apple-touch-icon" sizes="180x180" href="img/faviconit/favicon-180.png">
+        <link rel="shortcut icon" href="static/img/faviconit/favicon.ico">
+        <link rel="icon" sizes="16x16 32x32 64x64" href="static/img/faviconit/favicon.ico">
+        <link rel="icon" type="image/png" sizes="196x196" href="static/img/faviconit/favicon-192.png">
+        <link rel="icon" type="image/png" sizes="160x160" href="static/img/faviconit/favicon-160.png">
+        <link rel="icon" type="image/png" sizes="96x96" href="static/img/faviconit/favicon-96.png">
+        <link rel="icon" type="image/png" sizes="64x64" href="static/img/faviconit/favicon-64.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="static/img/faviconit/favicon-32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="static/img/faviconit/favicon-16.png">
+        <link rel="apple-touch-icon" href="static/img/faviconit/favicon-57.png">
+        <link rel="apple-touch-icon" sizes="114x114" href="static/img/faviconit/favicon-114.png">
+        <link rel="apple-touch-icon" sizes="72x72" href="static/img/faviconit/favicon-72.png">
+        <link rel="apple-touch-icon" sizes="144x144" href="static/img/faviconit/favicon-144.png">
+        <link rel="apple-touch-icon" sizes="60x60" href="static/img/faviconit/favicon-60.png">
+        <link rel="apple-touch-icon" sizes="120x120" href="static/img/faviconit/favicon-120.png">
+        <link rel="apple-touch-icon" sizes="76x76" href="static/img/faviconit/favicon-76.png">
+        <link rel="apple-touch-icon" sizes="152x152" href="static/img/faviconit/favicon-152.png">
+        <link rel="apple-touch-icon" sizes="180x180" href="static/img/faviconit/favicon-180.png">
         <meta name="msapplication-TileColor" content="#FFFFFF">
-        <meta name="msapplication-TileImage" content="img/faviconit/favicon-144.png">
-        <meta name="msapplication-config" content="img/faviconit/browserconfig.xml">
+        <meta name="msapplication-TileImage" content="static/img/faviconit/favicon-144.png">
+        <meta name="msapplication-config" content="static/img/faviconit/browserconfig.xml">
 
         <!-- 
     	Volton Template
@@ -56,11 +56,11 @@
                     <div class="col-md-12">
                         <div class="top-section">
                             <div class="profile-image">
-                                <img src="img/profile.jpg" alt="Matthew">
+                                <img src="static/img/profile.jpg" alt="Matthew">
                             </div>
                             <div class="profile-content">
                                 <h3 class="profile-title">Matthew Carter</h3>
-                                <p class="profile-description">Programmer</p>
+                                <p class="profile-description">Computer Scientist</p>
                             </div>
                         </div>
                     </div>
@@ -84,10 +84,10 @@
         <div class="sidebar-menu hidden-xs hidden-sm">
             <div class="top-section">
                 <div class="profile-image">
-                    <img src="img/profile.jpg" alt="Matthew">
+                    <img src="static/img/profile.jpg" alt="Matthew">
                 </div>
                 <h3 class="profile-title">Matthew Carter</h3>
-                <p class="profile-description">Programmer</p>
+                <p class="profile-description">Computer Scientist</p>
             </div> <!-- top-section -->
             <div class="main-navigation">
                 <ul class="navigation">
@@ -101,7 +101,7 @@
                 </ul>
             </div> <!-- .main-navigation -->
             <button class="btn">
-                <a href="img/welcome.jpg" target="_blank" download><i class="fa fa-download"></i> Resume</a>
+                <a href="static/Resume.pdf" target="_blank" download><i class="fa fa-download"></i> Resume</a>
             </button>
             <div class="social-icons">
                 <ul>
@@ -152,7 +152,7 @@
                         <div class="row hobbies-holder">
                             <div class="col-md-4 col-sm-6">
                                 <div class="project-item">
-                                    <img src="img/hobby-1.jpg" alt="">
+                                    <img src="static/img/hobby-1.jpg" alt="">
                                     <div class="project-hover">
                                         <div class="inside">
                                             <h5><a href="#">Snowboarding</a></h5>
@@ -163,7 +163,7 @@
                             </div>
                             <div class="col-md-4 col-sm-6">
                                 <div class="project-item">
-                                    <img src="img/hobby-2.jpg" alt="">
+                                    <img src="static/img/hobby-2.jpg" alt="">
                                     <div class="project-hover">
                                         <div class="inside">
                                             <h5><a href="#">Scuba Diving</a></h5>
@@ -174,7 +174,7 @@
                             </div>
                             <div class="col-md-4 col-sm-6">
                                 <div class="project-item">
-                                    <img src="img/hobby-3.jpg" alt="">
+                                    <img src="static/img/hobby-3.jpg" alt="">
                                     <div class="project-hover">
                                         <div class="inside">
                                             <h5><a href="#">eSports</a></h5>
@@ -246,19 +246,6 @@
                         </div>
                         <div class="row">
                             <div class="col-md-12">
-                                <h5>Clark College <small>Fall 2015 - Spring 2017</small></h5>  
-                                <div class="col-md-12">
-                                    <h6>CSE 121 - Intro to C</h6>
-                                    <h6>CSE 222 - Intro to Data Structures</h6>
-                                    <h6>CSE 223 - Data Structures & Object Oriented Programming</h6>
-                                </div>
-                                <div class="col-md-12">
-                                    <h6>MATH 254 - Multivariable Calculus</h6>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-md-12">
                                 <h5>Western Washington University <small>Fall 2017 - Spring 2020</small></h5>
                                 <div class="col-md-12">
                                     <h6>CSCI 247 - Computer Systems I</h6>
@@ -271,6 +258,19 @@
                                 <div class="col-md-12">
                                     <h6>MATH 204 - Elementary Linear Algebra</h6>
                                     <h6>MATH 341 - Probability and Statistics *</h6>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-12">
+                                <h5>Clark College <small>Fall 2015 - Spring 2017</small></h5>  
+                                <div class="col-md-12">
+                                    <h6>CSE 121 - Intro to C</h6>
+                                    <h6>CSE 222 - Intro to Data Structures</h6>
+                                    <h6>CSE 223 - Data Structures & Object Oriented Programming</h6>
+                                </div>
+                                <div class="col-md-12">
+                                    <h6>MATH 254 - Multivariable Calculus</h6>
                                 </div>
                             </div>
                         </div>
@@ -292,28 +292,28 @@
                         </div>
                         <div class="row">
                             <div class="col-md-12">
-                                <h5>G6 Airpark <small>Court Monitor</small></h5>
-                                <div class="col-md-12">
-                                    <h6>January - August 2015</h6>
-                                    <p>At G6 Airpark I was tasked with watching over different sections of the trampoline park to ensure that our customers were having a safe and enjoyable time on the trampolines. I quickly develoepd interpersonal skills that helped me communicate to our customers that our priority was their well-being and that they were having a fun time.</p>
-                                </div>
-                            </div>
-                        </div>
-                        <br>
-                        <div class="row">
-                            <div class="col-md-12">
                                 <h5>Christenson Electric <small>IT Systems Admin Intern</small></h5>
                                 <div class="col-md-12">
-                                    <h6>Summer 2016</h6>
-                                    <p>During the summer of 2016 was my first summer as an IT Systems Admin Intern at Christenson Electric where I developed new technical, problem solving, and interpersonal skills in order to efficently diagnose a problem, come up with a solution, and implement said solution. I also became familiar with the basics of networking, building and deploying new workstations, and managing the office's general IT needs.</p>
+                                    <h6>Summer 2018</h6>
+                                    <p>During the summer of 2018 my responsibilities at Christenson consisted mostly of working with their cloud based application to help quicken work effiency and speed. My job was to design and develop new interactions with the forms such as submit and clear buttons along with designing a more modern interface for submission fields within the forms.</p>
                                 </div>
                                 <div class="col-md-12">
                                     <h6>Summer 2017</h6>
                                     <p>During the summer of 2017 my responsibilities at Christenson began to change as I started working with their new cloud based application in which they wanted to transfer most of their paper forms so that the technicians outside of the office would be able to fill them out on their iPads. My job was to become familiar with the new system and begin creating replica forms that had virtual fields that could be used to submit data.</p>
                                 </div>
                                 <div class="col-md-12">
-                                    <h6>Summer 2018</h6>
-                                    <p>During the summer of 2018 my responsibilities at Christenson consisted mostly of working with their cloud based application to help quicken work effiency and speed. My job was to design and develop new interactions with the forms such as submit and clear buttons along with designing a more modern interface for submission fields within the forms.</p>
+                                    <h6>Summer 2016</h6>
+                                    <p>During the summer of 2016 was my first summer as an IT Systems Admin Intern at Christenson Electric where I developed new technical, problem solving, and interpersonal skills in order to efficently diagnose a problem, come up with a solution, and implement said solution. I also became familiar with the basics of networking, building and deploying new workstations, and managing the office's general IT needs.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <br>
+                        <div class="row">
+                            <div class="col-md-12">
+                                <h5>G6 Airpark <small>Court Monitor</small></h5>
+                                <div class="col-md-12">
+                                    <h6>January - August 2015</h6>
+                                    <p>At G6 Airpark I was tasked with watching over different sections of the trampoline park to ensure that our customers were having a safe and enjoyable time on the trampolines. I quickly develoepd interpersonal skills that helped me communicate to our customers that our priority was their well-being and that they were having a fun time.</p>
                                 </div>
                             </div>
                         </div>
