--- a/index.html
+++ b/index.html
@@ -325,11 +325,12 @@
                         <div class="row">
                             <div class="col-md-12">
                                 <h4 class="widget-title">GET IN TOUCH WITH ME</h4>
-                                <p>If you're interested in getting in touch with me please fill out the form below or feel free to email me directly at matthew@macarter.net.</p>
+                                <p>If you're interested in getting in touch with me please click the button below or feel free to email me directly at matthew@macarter.net.</p>
                             </div>
                         </div>
                         <div class="row">
                             <form action="mailto:matthew@macarter.net" method="post" type="text/plain" class="contact-form">
+                            <!--
                                 <fieldset class="col-md-4 col-sm-6">
                                     <input type="text" id="your-name" placeholder="Your Name...">
                                 </fieldset>
@@ -342,6 +343,7 @@
                                 <fieldset class="col-md-12 col-sm-12">
                                     <textarea name="message" id="message" cols="30" rows="6" placeholder="Leave your message..."></textarea>
                                 </fieldset>
+                            -->
                                 <fieldset class="col-md-12 col-sm-12">
                                     <input type="submit" class="button big default" value="Send Message">
                                 </fieldset>
