Update resume download link

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                 </ul>
             </div> <!-- .main-navigation -->
             <button class="btn">
-                <a href="static/Resume.pdf" target="_blank" download><i class="fa fa-download"></i> Resume</a>
+                <a href="static/Matthew_Carter_Resume.pdf" target="_blank" download><i class="fa fa-download"></i> Resume</a>
             </button>
             <div class="social-icons">
                 <ul>
