Update education section and styling

--- a/index.html
+++ b/index.html
@@ -245,38 +245,39 @@
                         </div>
                         <div class="row">
                             <div class="col-md-12">
-                                <h5>Western Washington University <small>Fall 2017 - Spring 2020</small></h5>
-                                <div class="col-md-12">
-                                    <h6>CSCI 247 - Computer Systems I</h6>
-                                    <h6>CSCI 301 - Formal Language & Functional Programming</h6>
-                                    <h6>CSCI 305 - Analysis of Algorithms I</h6>
-                                    <h6>CSCI 345 - Object Oriented Design</h6>
-                                    <h6>CSCI 347 - Computer Systems II</h6>
-                                    <h6>CSCI 367 - Computer Networks I</h6>
+                                <h4 class="education-college">Western Washington University <small>Fall 2017 - Spring 2020</small></h4>
+                                <div class="col-sm-6">
+                                    <h5 class="education-quarter">Previous Courses</h5>
+                                    <h6 class="education-class">CSCI 247 - Computer Systems I</h6>
+                                    <h6 class="education-class">CSCI 301 - Formal Language & Functional Programming</h6>
+                                    <h6 class="education-class">CSCI 305 - Analysis of Algorithms I</h6>
+                                    <h6 class="education-class">CSCI 345 - Object Oriented Design</h6>
+                                    <h6 class="education-class">CSCI 347 - Computer Systems II</h6>
+                                    <h6 class="education-class">CSCI 367 - Computer Networks I</h6>
+                                </div>
+                                <div class="col-sm-6">
+                                    <h5 clsas="education-quarter">Current Courses</h5>
+                                    <h6 class="education-class">CSCI 511 - Analysis of Algorithms</h6>
+                                    <h6 class="education-class">CSCI 330 - Database Systems</h6>
+                                    <h6 class="education-class">MATH 331 - Oridnary Differential Equations</h6>
                                 </div>
                                 <div class="col-md-12">
-                                    <h6>MATH 204 - Elementary Linear Algebra</h6>
-                                    <h6>MATH 341 - Probability and Statistics *</h6>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-md-12">
-                                <h5>Clark College <small>Fall 2015 - Spring 2017</small></h5>  
-                                <div class="col-md-12">
-                                    <h6>CSE 121 - Intro to C</h6>
-                                    <h6>CSE 222 - Intro to Data Structures</h6>
-                                    <h6>CSE 223 - Data Structures & Object Oriented Programming</h6>
-                                </div>
-                                <div class="col-md-12">
-                                    <h6>MATH 254 - Multivariable Calculus</h6>
+                                    <h6 class="education-class">MATH 204 - Elementary Linear Algebra</h6>
+                                    <h6 class="education-class">MATH 341 - Probability and Statistics</h6>
                                 </div>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-md-12">
-                                <br>
-                                <p>* Classes that are currently being taken</p>
+                                <h4 class="education-college">Clark College <small>Fall 2015 - Spring 2017</small></h4>  
+                                <div class="col-md-12">
+                                    <h6 class="education-class">CSE 121 - Intro to C</h6>
+                                    <h6 class="education-class">CSE 222 - Intro to Data Structures</h6>
+                                    <h6 class="education-class">CSE 223 - Data Structures & Object Oriented Programming</h6>
+                                </div>
+                                <div class="col-md-12">
+                                    <h6 class="education-class">MATH 254 - Multivariable Calculus</h6>
+                                </div>
                             </div>
                         </div>
                     </div> <!-- #education -->
